# MagniForge

./: README.md
cpp/: .gitignore  CMakeLists.txt
python/: .gitignore
python/magniforge-proto/src/analysis/: __init__.py  transient_analysis.py
python/magniforge-proto/src/processing/: __init__.py  stft_processor.py
python/magniforge-proto/src/processing/transient_processing/: __init__.py  bass_enhancer.py  subharmonic_generator.py  transient_modifier.py
python/magniforge-proto/tests/: test_analysis.py  test_processing.py
